--- a/Paper/Supplements_Review.tex
+++ b/Paper/Supplements_Review.tex
@@ -219,7 +219,7 @@ model & GLM & variable & mean & 5.5\% & 94.5\%\\
 
 \begin{table}[H]
 
-\caption{\label{tab:tableSReadl_data_AIC_RSS} AIC and RSS for the fit  to ALD from the 1k Genome data.}
+\caption{\label{tab:table_Supplements_GLM_EP_SP_tm_effect_size_deviation} }
 
 \centering
 
